--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ButtonSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ButtonSkin.mxml
@@ -11,17 +11,19 @@ in accordance with the terms of the license agreement accompanying it.
 
 -->
 
-<!--- The default skin class for the Spark Button component.  
+<!--- The default skin class for the Spark Button component.
 
 @langversion 3.0
 @playerversion Flash 10
 @playerversion AIR 1.5
 @productversion Flex 4
 -->
-<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
-			 minWidth="21" minHeight="21"
+<s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
+			 xmlns:s="library://ns.adobe.com/flex/spark"
+			 minWidth="21"
+			 minHeight="21"
 			 alpha.disabled="0.5">
-	
+
 	<!-- host component -->
 	<fx:Metadata>
 		<![CDATA[ 
@@ -31,76 +33,89 @@ in accordance with the terms of the license agreement accompanying it.
 		[HostComponent("spark.components.Button")]
 		]]>
 	</fx:Metadata>
-	
+
 	<fx:Script>
-		<![CDATA[         
-			/* Define the skin elements that should not be colorized. 
-			For button, the graphics are colorized but the label is not. */
-			static private const exclusions:Array = ["labelDisplay"];
-			
-			/** 
-			 * @copy spark.skins.SparkSkin#colorizeExclusions
-			 */     
-			override public function get colorizeExclusions():Array {return exclusions;}
-			
-			/**
-			 *  @private
+		<![CDATA[
+			/*
+			   Define the skin elements that should not be colorized.
+			   For button, the graphics are colorized but the label is not.
 			 */
-			override protected function updateDisplayList(unscaledWidth:Number, unscaledHeight:Number) : void
+			static private const exclusions : Array = [ "labelDisplay" ];
+
+			/**
+			 * @copy spark.skins.SparkSkin#colorizeExclusions
+			 */
+			override public function get colorizeExclusions() : Array
 			{
-				var cr:Number = getStyle("cornerRadius");
-				
-				if (cornerRadius != cr)
-					cornerRadius = cr;
-				
-				super.updateDisplayList(unscaledWidth, unscaledHeight);
+				return exclusions;
 			}
-			
+
+			/**
+			 * @private
+			 */
+			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
+			{
+				var cr : Number = getStyle( "cornerRadius" );
+
+				if ( cornerRadius != cr )
+					cornerRadius = cr;
+
+				super.updateDisplayList( unscaledWidth, unscaledHeight );
+			}
+
 			[Bindable]
-			public var cornerRadius:Number = 2;
-		]]>        
+			public var cornerRadius : Number = 2;
+		]]>
 	</fx:Script>
-	
+
 	<!-- states -->
 	<s:states>
-		<s:State name="up" />
-		<s:State name="over" />
-		<s:State name="down" />
-		<s:State name="disabled" />
+		<s:State name="up"/>
+		<s:State name="over"/>
+		<s:State name="down"/>
+		<s:State name="disabled"/>
 	</s:states>
-	
+
 	<!-- layer 1: shadow -->
-	<s:Rect left="-1" right="-1" top="-1" bottom="-1" radiusX="{cornerRadius}">
+	<s:Rect left="-1"
+			right="-1"
+			top="-1"
+			bottom="-1"
+			radiusX="{cornerRadius}">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="0x000000" 
+				<s:GradientEntry color="0x000000"
 								 color.down="0xFFFFFF"
 								 alpha="0.01"
-								 alpha.down="0" />
-				<s:GradientEntry color="0x000000" 
-								 color.down="0xFFFFFF" 
+								 alpha.down="0"/>
+				<s:GradientEntry color="0x000000"
+								 color.down="0xFFFFFF"
 								 alpha="0.07"
-								 alpha.down="0.5" />
+								 alpha.down="0.5"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
-	
+
 	<!-- layer 2: fill -->
-	<s:Rect left="0" right="0" top="0" bottom="0" radiusX="{cornerRadius}">
+	<s:Rect left="0"
+			right="0"
+			top="0"
+			bottom="0"
+			radiusX="{cornerRadius}">
 		<s:fill>
 			<s:LinearGradient rotation="90">
-				<s:GradientEntry color="0xFFFFFF" 
-								 color.over="0xBBBDBD" 
-								 color.down="0xAAAAAA" 
-								 alpha="0.85" />
-				<s:GradientEntry color="0xD8D8D8" 
-								 color.over="0x9FA0A1" 
-								 color.down="0x929496" 
-								 alpha="0.85" />
+				<s:GradientEntry color="0xFFFFFF"
+								 color.over="0xBBBDBD"
+								 color.down="0xAAAAAA"
+								 alpha="0.85"/>
+				<s:GradientEntry color="0xD8D8D8"
+								 color.over="0x9FA0A1"
+								 color.down="0x929496"
+								 alpha="0.85"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
-	
+
 	<!-- layer 3: fill lowlight -->
 	<!--<s:Rect left="1" right="1" bottom="1" height="9" radiusX="{cornerRadius}">
 		<s:fill>
@@ -110,7 +125,7 @@ in accordance with the terms of the license agreement accompanying it.
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>-->
-	
+
 	<!-- layer 4: fill highlight -->
 	<!--<s:Rect left="1" right="1" top="1" height="9" radiusX="{cornerRadius}">
 		 <s:fill>
@@ -120,7 +135,7 @@ in accordance with the terms of the license agreement accompanying it.
 		 alpha.down="0.12" />
 		 </s:fill>
 		 </s:Rect>-->
-	
+
 	<!-- layer 5: highlight stroke (all states except down) -->
 	<!--<s:Rect left="1" right="1" top="1" bottom="1" radiusX="{cornerRadius}" excludeFrom="down">
 		<s:stroke>
@@ -130,7 +145,7 @@ in accordance with the terms of the license agreement accompanying it.
 			</s:LinearGradientStroke>
 		</s:stroke>
 	</s:Rect>-->
-	
+
 	<!-- layer 6: highlight stroke (down state only) -->
 	<!--<s:Rect left="1" top="1" bottom="1" width="1" includeIn="down">
 		<s:fill>
@@ -152,31 +167,35 @@ in accordance with the terms of the license agreement accompanying it.
 			<s:SolidColor color="0x000000" alpha="0.09" />
 		</s:fill>
 	</s:Rect>-->
-	
+
 	<!-- layer 7: border - put on top of the fill so it doesn't disappear when scale is less than 1 -->
 	<!--<s:Rect left="0" right="0" top="0" bottom="0" width="69" height="20" radiusX="{cornerRadius}">
 		<s:stroke>
 			<s:LinearGradientStroke rotation="90" weight="1">
-				<s:GradientEntry color="0x000000" 
+				<s:GradientEntry color="0x000000"
 								 alpha="0.5625"
 								 alpha.down="0.6375" />
-				<s:GradientEntry color="0x000000" 
-								 alpha="0.75" 
+				<s:GradientEntry color="0x000000"
+								 alpha="0.75"
 								 alpha.down="0.85" />
 			</s:LinearGradientStroke>
 		</s:stroke>
 	</s:Rect>-->
-	
+
 	<!-- layer 8: text -->
-	<!--- 
+	<!---
 	@copy spark.components.supportClasses.ButtonBase#labelDisplay
 	-->
 	<s:Label id="labelDisplay"
 			 textAlign="center"
 			 verticalAlign="middle"
 			 maxDisplayedLines="1"
-			 horizontalCenter="0" verticalCenter="1"
-			 left="10" right="10" top="2" bottom="2">
+			 horizontalCenter="0"
+			 verticalCenter="1"
+			 left="10"
+			 right="10"
+			 top="2"
+			 bottom="2">
 	</s:Label>
-	
+
 </s:SparkSkin>
