--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ActionItemRenderer.mxml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<components:BaseItemRenderer
-				xmlns:components="net.vdombox.ide.modules.events.view.components.*"
-				xmlns:fx="http://ns.adobe.com/mxml/2009"
-				xmlns:s="library://ns.adobe.com/flex/spark"
-				xmlns:mx="library://ns.adobe.com/flex/mx"
-				
-				focusEnabled="false" xmlns:view="net.vdombox.ide.common.view.*">
+<components:BaseItemRenderer xmlns:components="net.vdombox.ide.modules.events.view.components.*"
+							 xmlns:fx="http://ns.adobe.com/mxml/2009"
+							 xmlns:s="library://ns.adobe.com/flex/spark"
+							 xmlns:mx="library://ns.adobe.com/flex/mx"
+							 focusEnabled="false"
+							 xmlns:view="net.vdombox.ide.common.view.*">
 
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.model._vo.ClientActionVO;
 			import net.vdombox.ide.common.model._vo.ServerActionVO;
-			
-			[Embed(source='assets/action.png')]
-			public var ActionIcon:Class;
-			
-			[Embed(source='assets/python.png')]
-			public var PythonIcon:Class;
-			
-			[Embed(source='assets/vbscript.png')]
-			public var VbscriptIcon:Class;
-			
+
+			[Embed( source = 'assets/action.png' )]
+			public var ActionIcon : Class;
+
+			[Embed( source = 'assets/python.png' )]
+			public var PythonIcon : Class;
+
+			[Embed( source = 'assets/vbscript.png' )]
+			public var VbscriptIcon : Class;
+
 			override public function set data( value : Object ) : void
 			{
-				if( value is ServerActionVO )
+				if ( value is ServerActionVO )
 					currentIcon = value[ "language" ] == "python" ? PythonIcon : VbscriptIcon;
 				else
 				{
@@ -31,15 +30,14 @@
 						toolTip = ClientActionVO( value ).help;
 					currentIcon = ActionIcon;
 				}
-				
+
 				super.data = value;
 			}
-			
+
 			override public function get data() : Object
 			{
 				return super.data;
 			}
-			
 		]]>
 	</fx:Script>
 
