--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/EventElement.mxml
@@ -1,69 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 <components:BaseElement xmlns:components="net.vdombox.ide.modules.events.view.components.*"
-					  xmlns:fx="http://ns.adobe.com/mxml/2009"
-					  xmlns:mx="library://ns.adobe.com/flex/halo"
-					  xmlns:s="library://ns.adobe.com/flex/spark"
-					  width="180"
-					  skinClass="net.vdombox.ide.modules.events.view.skins.EventElementSkin"
-					  creationComplete="skinnablecontainer1_creationCompleteHandler(event)">
+						xmlns:fx="http://ns.adobe.com/mxml/2009"
+						xmlns:mx="library://ns.adobe.com/flex/halo"
+						xmlns:s="library://ns.adobe.com/flex/spark"
+						width="180"
+						skinClass="net.vdombox.ide.modules.events.view.skins.EventElementSkin"
+						creationComplete="skinnablecontainer1_creationCompleteHandler(event)">
 
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.model._vo.EventParameterVO;
 			import net.vdombox.ide.modules.events.view.skins.EventElementSkin;
-			
+
 			import spark.components.Group;
 			import spark.components.Label;
 
-			[SkinPart( required="true" )]
+			[SkinPart( required = "true" )]
 			public var headerGroup : Group;
-			
+
 			private var mouseOffcetX : int;
+
 			private var mouseOffcetY : int;
-			
+
 			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
 			{
 				super.updateDisplayList( unscaledWidth, unscaledHeight );
-				
+
 				if ( parametersContainer && isNeedUpdateParameters && data && data.state )
 				{
 					if ( parameters && data.parameters == parameters )
 						return;
-					
+
 					parameters = data.parameters;
-					
+
 					parametersContainer.removeAllElements();
-					
+
 					nameGroup.includeInLayout = true;
 					//eventRenderer.includeInLayout = true;
-					
+
 					if ( skin.currentState == "normal" || skin.currentState == "disabled" )
-						(skin as EventElementSkin).setLayout(true);
-				
+						( skin as EventElementSkin ).setLayout( true );
+
 					if ( data.parameters.length == 0 )
 						return;
-				
+
 					var parameter : EventParameterVO;
 					var parameterRenderer : ParameterRenderer;
 					var parameterRendererFactory : ClassFactory = new ClassFactory( ParameterRenderer );
-				
+
 					parameterRendererFactory.properties = { percentWidth: 100 };
-					
+
 					for each ( parameter in data.parameters )
 					{
 						parameterRenderer = parameterRendererFactory.newInstance();
-					
+
 						parameterRenderer.title = parameter.name;
 						parameterRenderer.toolTip = parameter.help;
-					
+
 						parametersContainer.addElement( parameterRenderer );
 					}
 				}
-				
-				/*if( objectNameGroup )
-				{
-					objectNameGroup.visible = data is ClientActionVO;
-				}*/
+
+			/*
+			   if( objectNameGroup )
+			   {
+			   objectNameGroup.visible = data is ClientActionVO;
+			   }
+			 */
 			}
 
 			override protected function partAdded( partName : String, instance : Object ) : void
@@ -73,7 +76,6 @@
 				if ( instance == headerGroup )
 					headerGroup.addEventListener( MouseEvent.MOUSE_DOWN, header_mouseDownHandler );
 			}
-
 		]]>
 	</fx:Script>
 
@@ -82,22 +84,34 @@
 		<s:VerticalLayout gap="1"/>
 	</components:layout>
 
-	<s:Group id="nameGroup" height="20" width="100%" includeInLayout="false">
-		
-		<s:Rect bottom="0" left="0" right="0" top="0">
-			
+	<s:Group id="nameGroup"
+			 height="20"
+			 width="100%"
+			 includeInLayout="false">
+
+		<s:Rect bottom="0"
+				left="0"
+				right="0"
+				top="0">
+
 			<s:fill>
-				
+
 				<s:LinearGradient rotation="90">
-					
+
 					<s:GradientEntry color="0xFFFFFF"/>
-					
+
 					<s:GradientEntry color="0xF8F8F8"/>
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
-		
-		<s:Label text="{ data.objectName }" textAlign="center" verticalCenter="0" left="5" right="5" width="100%" maxDisplayedLines="1"/>
+
+		<s:Label text="{ data.objectName }"
+				 textAlign="center"
+				 verticalCenter="0"
+				 left="5"
+				 right="5"
+				 width="100%"
+				 maxDisplayedLines="1"/>
 	</s:Group>
 
 	<!--<components:ParameterRenderer id="eventRenderer" icon="@Embed('assets/event.png')" width="100%"
