--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ObjectsTreePanel.mxml
@@ -11,51 +11,51 @@
 	<fx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
-			
+
 			import net.vdombox.ide.common.view.components.VDOMImage;
-			
+
 			[Bindable]
 			private var _structure : XMLList;
-			
+
 			public function set structure( value : XMLList ) : void
 			{
 				_structure = value;
 			}
-			
+
 			public function get structure() : XMLList
 			{
 				return _structure;
 			}
-			
-			protected function objectsTree_creationCompleteHandler(event:FlexEvent):void
+
+			protected function objectsTree_creationCompleteHandler( event : FlexEvent ) : void
 			{
 				// TODO Auto-generated method stub
-				objectsTree.setStyle("disclosureOpenIcon", VDOMImage.Opened_Tree_Icon);
-				objectsTree.setStyle("disclosureClosedIcon", VDOMImage.Closed_Tree_Icon);
+				objectsTree.setStyle( "disclosureOpenIcon", VDOMImage.Opened_Tree_Icon );
+				objectsTree.setStyle( "disclosureClosedIcon", VDOMImage.Closed_Tree_Icon );
 			}
-			
+
 			public function get selectedObject() : XML
 			{
 				var selectedItem : XML = objectsTree.selectedItem as XML;
-				
+
 				if ( !selectedItem && elementForSelection )
 					selectedItem = elementForSelection;
 				var item : XML;
-				
+
 				if ( selectedItem && selectedItem.name() == "object" )
 					item = selectedItem;
-				
+
 				return item;
-				
+
 			}
-			
+
 			public function set selectedObjectID( value : String ) : void
 			{
 				var currentID : String;
-				
+
 				if ( !_structure )
 					return;
-				
+
 				try
 				{
 					currentID = objectsTree.selectedItem.@id;
@@ -63,20 +63,20 @@
 				catch ( error : Error )
 				{
 				}
-				
+
 				if ( !value )
 					objectsTree.selectedIndex = -1;
 				else if ( value != currentID )
 					setSelectionByID( value );
 			}
-			
+
 			public function set selectedPageID( value : String ) : void
 			{
 				var currentID : String;
-				
+
 				if ( !_structure )
 					return;
-				
+
 				try
 				{
 					currentID = objectsTree.selectedItem.@id;
@@ -84,104 +84,112 @@
 				catch ( error : Error )
 				{
 				}
-				
-				
+
+
 				if ( !value )
 					objectsTree.selectedIndex = -1;
-				else 
+				else
 					//					if ( value != currentID )
 					setSelectionByID( value );
 			}
-			
+
 			private var elementForSelection : XML;
+
 			private var _needUpdateProperties : Boolean = false;
-			
+
 			private function setSelectionByID( id : String ) : void
 			{
 				try
 				{
 					elementForSelection = _structure.( @id == id )[ 0 ];
-					
+
 					if ( !elementForSelection )
 						elementForSelection = _structure..object.( @id == id )[ 0 ];
 				}
 				catch ( error : Error )
 				{
-					
+
 				}
-				
+
 				if ( elementForSelection )
 				{
 					_needUpdateProperties = true;
-					
+
 					invalidateProperties();
 				}
 			}
-			
-			override public function  validateProperties():void
+
+			override public function validateProperties() : void
 			{
 				super.validateProperties();
-				
+
 				if ( _needUpdateProperties )
 				{
-					_needUpdateProperties 		= false;
-					
-					_needValideteDisplayList 	= true;
-					
+					_needUpdateProperties = false;
+
+					_needValideteDisplayList = true;
+
 					openTree( elementForSelection );
-					
+
 					objectsTree.selectedItem = elementForSelection;
-					
+
 					invalidateDisplayList();
 				}
-				
+
 			}
-			
+
 			private function openTree( item : Object ) : void
 			{
 				var parentItem : Object = XML( item ).parent();
-				
+
 				if ( parentItem )
 				{
 					openTree( parentItem );
 					objectsTree.expandItem( parentItem, true, false );
 				}
 			}
-			
+
 			private var _needValideteDisplayList : Boolean = false;
-			override public function  validateDisplayList():void
+
+			override public function validateDisplayList() : void
 			{
 				// scrolling to necessary position
 				super.validateDisplayList();
-				
+
 				if ( !_needValideteDisplayList )
 					return
-					
-					_needValideteDisplayList = false;
-				
-				if (objectsTree.selectedIndex == -1 )
+
+						_needValideteDisplayList = false;
+
+				if ( objectsTree.selectedIndex == -1 )
 					return;
-				
-				var index : int =  objectsTree.selectedIndex;
-				var newVPos:int;
-				
-				objectsTree.scrollToIndex(index);
-				
+
+				var index : int = objectsTree.selectedIndex;
+				var newVPos : int;
+
+				objectsTree.scrollToIndex( index );
+
 			}
-			
 		]]>
 	</fx:Script>
-	
-	
-	<s:Rect width="100%" height="100%">
+
+
+	<s:Rect width="100%"
+			height="100%">
 		<s:fill>
-			<s:BitmapFill source = "{VDOMImage.Fon_Texture}" smooth="true" fillMode="repeat"/>
+			<s:BitmapFill source="{VDOMImage.Fon_Texture}"
+						  smooth="true"
+						  fillMode="repeat"/>
 		</s:fill>
 	</s:Rect>
 
-	<mx:Tree id="objectsTree" maxHorizontalScrollPosition="140" horizontalScrollPolicy="auto"
-			 dataProvider="{ _structure }" itemRenderer="net.vdombox.ide.common.view.components.itemrenderers.ObjectsTreePanelItemRenderer"
+	<mx:Tree id="objectsTree"
+			 maxHorizontalScrollPosition="140"
+			 horizontalScrollPolicy="auto"
+			 dataProvider="{ _structure }"
+			 itemRenderer="net.vdombox.ide.common.view.components.itemrenderers.ObjectsTreePanelItemRenderer"
 			 height="100%"
-			 width="100%" contentBackgroundAlpha="0"
+			 width="100%"
+			 contentBackgroundAlpha="0"
 			 creationComplete="objectsTree_creationCompleteHandler(event)"/>
 </s:Panel>
