--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ParameterRenderer.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/ParameterRenderer.mxml
@@ -2,7 +2,6 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
-		 
 		 height="20">
 
 	<fx:Script>
@@ -15,29 +14,47 @@
 		]]>
 	</fx:Script>
 
-	<s:Rect bottom="0" left="0" right="0" top="0">
+	<s:Rect bottom="0"
+			left="0"
+			right="0"
+			top="0">
 
 		<s:fill>
 
 			<s:LinearGradient rotation="90">
 
-				<s:GradientEntry color="0xFFFFFF" />
+				<s:GradientEntry color="0xFFFFFF"/>
 
-				<s:GradientEntry color="0xF8F8F8" />
+				<s:GradientEntry color="0xF8F8F8"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 
-	<s:HGroup verticalAlign="middle" verticalCenter="0" paddingLeft="4" paddingRight="4" gap="9">
+	<s:HGroup verticalAlign="middle"
+			  verticalCenter="0"
+			  paddingLeft="4"
+			  paddingRight="4"
+			  gap="9">
 
-		<mx:Image source="@Embed('assets/parameter.png')" width="16" height="16" alpha="0.3"/>
+		<mx:Image source="@Embed('assets/parameter.png')"
+				  width="16"
+				  height="16"
+				  alpha="0.3"/>
 
-		<s:TextInput text="{ title }" width="100%" editable="false" contentBackgroundAlpha="0" borderVisible="false" />
+		<s:TextInput text="{ title }"
+					 width="100%"
+					 editable="false"
+					 contentBackgroundAlpha="0"
+					 borderVisible="false"/>
 	</s:HGroup>
-	
-	<s:Line xFrom="24" xTo="24" yFrom="0" yTo="20">
+
+	<s:Line xFrom="24"
+			xTo="24"
+			yFrom="0"
+			yTo="20">
 		<s:stroke>
-			<s:SolidColorStroke color="0xB6B6B6" weight="1" />
+			<s:SolidColorStroke color="0xB6B6B6"
+								weight="1"/>
 		</s:stroke>
 	</s:Line>
 </s:Group>
