--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/SettingsScreen.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/components/SettingsScreen.mxml
@@ -2,10 +2,9 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
-		 
 		 implements="net.vdombox.ide.common.interfaces.ISettingsScreen"
-		 
-		 height="100%" width="100%">
+		 height="100%"
+		 width="100%">
 
 	<fx:Script>
 		<![CDATA[
