--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ElementButtonSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/ElementButtonSkin.mxml
@@ -19,8 +19,8 @@
 <s:SparkSkin xmlns:fx="http://ns.adobe.com/mxml/2009"
 			 xmlns:mx="library://ns.adobe.com/flex/mx"
 			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 
-			 minHeight="0" minWidth="0"
+			 minHeight="0"
+			 minWidth="0"
 			 alpha.disabled="0.5">
 	<!-- host component -->
 
@@ -35,8 +35,10 @@
 
 	<fx:Script>
 		<![CDATA[
-			/* Define the skin elements that should not be colorized.
-			 For button, the graphics are colorized but the label is not. */
+			/*
+			   Define the skin elements that should not be colorized.
+			   For button, the graphics are colorized but the label is not.
+			 */
 			static private const exclusions : Array = [ "labelDisplay" ];
 
 			/**
@@ -48,7 +50,7 @@
 			}
 
 			/**
-			 *  @private
+			 * @private
 			 */
 			override protected function updateDisplayList( unscaledWidth : Number, unscaledHeight : Number ) : void
 			{
@@ -68,43 +70,57 @@
 
 	<s:states>
 
-		<s:State name="up" />
+		<s:State name="up"/>
 
-		<s:State name="over" />
+		<s:State name="over"/>
 
-		<s:State name="down" />
+		<s:State name="down"/>
 
-		<s:State name="disabled" />
+		<s:State name="disabled"/>
 	</s:states>
 	<!-- layer 1: shadow -->
 
-	<s:Rect bottom="-1" left="-1" right="-1" top="-1"
+	<s:Rect bottom="-1"
+			left="-1"
+			right="-1"
+			top="-1"
 			radiusX="{cornerRadius}">
 
 		<s:fill>
 
 			<s:LinearGradient rotation="90">
 
-				<s:GradientEntry color="0x000000" color.down="0xFFFFFF"
-								 alpha="0.01" alpha.down="0" />
+				<s:GradientEntry color="0x000000"
+								 color.down="0xFFFFFF"
+								 alpha="0.01"
+								 alpha.down="0"/>
 
-				<s:GradientEntry color="0x000000" color.down="0xFFFFFF"
-								 alpha="0.07" alpha.down="0.5" />
+				<s:GradientEntry color="0x000000"
+								 color.down="0xFFFFFF"
+								 alpha="0.07"
+								 alpha.down="0.5"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
 	<!-- layer 2: fill -->
 
-	<s:Rect bottom="0" left="0" right="0" top="0"
+	<s:Rect bottom="0"
+			left="0"
+			right="0"
+			top="0"
 			radiusX="{cornerRadius}">
 
 		<s:fill>
 
 			<s:LinearGradient rotation="90">
 
-				<s:GradientEntry color="0xEAEAE8" color.down="0xAAAAAA" color.over="0xBBBDBD" />
+				<s:GradientEntry color="0xEAEAE8"
+								 color.down="0xAAAAAA"
+								 color.over="0xBBBDBD"/>
 
-				<s:GradientEntry color="0xCCCCCC" color.down="0x929496" color.over="0x9FA0A1" />
+				<s:GradientEntry color="0xCCCCCC"
+								 color.down="0x929496"
+								 color.over="0x9FA0A1"/>
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
@@ -174,10 +190,16 @@
 		 @copy spark.components.supportClasses.ButtonBase#labelDisplay
 	-->
 
-	<s:HGroup paddingLeft="5" verticalAlign="top" verticalCenter="0" gap="5" width="100%">
+	<s:HGroup paddingLeft="5"
+			  verticalAlign="top"
+			  verticalCenter="0"
+			  gap="5"
+			  width="100%">
 
 		<mx:Image id="buttonIcon"
-				  height="10" source="{ hostComponent.icon }" width="10" />
+				  height="10"
+				  source="{ hostComponent.icon }"
+				  width="10"/>
 
 		<s:Label id="labelDisplay"
 				 width="100%"
