--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsBarSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventsBarSkin.mxml
@@ -12,7 +12,7 @@ in accordance with the terms of the license agreement accompanying it.
 -->
 
 <!--- The default skin class for the Spark ButtonBar component. The buttons on the ButtonBar component
-use the ButtonBarLastButtonSkin, ButtonBarFirstButtonSkin and ButtonBarMiddleButtonSkin classes.  
+use the ButtonBarLastButtonSkin, ButtonBarFirstButtonSkin and ButtonBarMiddleButtonSkin classes.
 
 @see spark.components.ButtonBar
 @see spark.components.ButtonBarButton
@@ -23,9 +23,10 @@ use the ButtonBarLastButtonSkin, ButtonBarFirstButtonSkin and ButtonBarMiddleBut
 @playerversion AIR 1.5
 @productversion Flex 4
 -->
-<s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:s="library://ns.adobe.com/flex/spark" 
+<s:Skin xmlns:fx="http://ns.adobe.com/mxml/2009"
+		xmlns:s="library://ns.adobe.com/flex/spark"
 		alpha.disabled="0.5">
-	
+
 	<fx:Metadata>
 		<![CDATA[ 
 		/** 
@@ -33,47 +34,49 @@ use the ButtonBarLastButtonSkin, ButtonBarFirstButtonSkin and ButtonBarMiddleBut
 		*/
 		[HostComponent("spark.components.ButtonBar")]
 		]]>
-	</fx:Metadata> 
-	
+	</fx:Metadata>
+
 	<s:states>
-		<s:State name="normal" />
-		<s:State name="disabled" />
+		<s:State name="normal"/>
+		<s:State name="disabled"/>
 	</s:states>
-	
+
 	<fx:Declarations>
-		<!--- 
+		<!---
 		Specifies the skin class for the first button on the ButtonBar.
 		@default spark.skins.spark.ButtonBarFirstButtonSkin
 		-->
 		<fx:Component id="firstButton">
-			<s:ButtonBarButton skinClass="net.vdombox.ide.modules.events.view.skins.FirstEventsBarButtonSkin" />
+			<s:ButtonBarButton skinClass="net.vdombox.ide.modules.events.view.skins.FirstEventsBarButtonSkin"/>
 		</fx:Component>
-		
-		<!--- 
+
+		<!---
 		Specifies the skin class for the middle button(s) on the ButtonBar.
 		@default spark.skins.spark.ButtonBarMiddleButtonSkin
 		-->
-		<fx:Component id="middleButton" >
-			<s:ButtonBarButton skinClass="net.vdombox.ide.modules.events.view.skins.EventsBarButtonSkin" />
+		<fx:Component id="middleButton">
+			<s:ButtonBarButton skinClass="net.vdombox.ide.modules.events.view.skins.EventsBarButtonSkin"/>
 		</fx:Component>
-		
-		<!--- 
+
+		<!---
 		Specifies the skin class for the last button on the ButtonBar.
 		@default spark.skins.spark.ButtonBarLastButtonSkin
 		-->
-		<fx:Component id="lastButton" >
-			<s:ButtonBarButton skinClass="net.vdombox.ide.modules.events.view.skins.EventsBarButtonSkin" />
+		<fx:Component id="lastButton">
+			<s:ButtonBarButton skinClass="net.vdombox.ide.modules.events.view.skins.EventsBarButtonSkin"/>
 		</fx:Component>
-		
+
 	</fx:Declarations>
-	
-	<!--- 
+
+	<!---
 	@copy spark.components.SkinnableDataContainer#dataGroup
 	-->
-	<s:DataGroup id="dataGroup" width="100%" height="100%">
+	<s:DataGroup id="dataGroup"
+				 width="100%"
+				 height="100%">
 		<s:layout>
 			<s:ButtonBarHorizontalLayout gap="-1"/>
 		</s:layout>
 	</s:DataGroup>
-	
+
 </s:Skin>
